src/objects/QPMS__Supplier_General_Sub_Task__c.object
<CustomObject>
    <description>This is the Child object for Supplier General Tasks.</description>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <description>For calculate subtask age</description>
        <formula>TEXT( if(ISBLANK( QPMS__Closed_Date__c ),TODAY() - DATEVALUE( CreatedDate ), QPMS__Closed_Date__c-DATEVALUE( CreatedDate ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Completed__c</fullName>
        <description>This field is used to save Approval completed status</description>
        <label>Approval Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Assigned User value</description>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>This field is used to save Closed Date value</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Comments__c</fullName>
        <description>This field is used to save Comments value</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Completed value</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Sub_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>This field is used to save Completed Date</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed__c</fullName>
        <description>This field is used to save Completed status</description>
        <label>Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This field is used to save Description value</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Details__c</fullName>
        <description>This field is used to save Details value</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>This field is used to save Due Date value</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Initiating Site Security</description>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentRecordForAudittrail__c</fullName>
        <description>This field holds ParentRecordForAudittrail</description>
        <formula>QPMS__Supplier_General_Task__r.QPMS__Supplier_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRecordForAudittrail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Plan_Statement__c</fullName>
        <description>This field is used to save Plan Statement value</description>
        <label>Plan Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used to save Status value</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Task_Detail__c</fullName>
        <description>This field is used to save task details.</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Submit_WithOut_Approval__c</fullName>
        <description>This field is used to save Submit WithOut Approval value</description>
        <label>Submit WithOut Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This filed is used to save Supplier General Task</description>
        <label>Supplier General Task</label>
        <referenceTo>QPMS__Supplier_General_Task__c</referenceTo>
        <relationshipLabel>Supplier General Sub Tasks</relationshipLabel>
        <relationshipName>Supplier_General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>This field is used to save Title value</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This field is used to save Type value</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Corrective</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Risk Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Supplier General Sub Task</label>
    <nameField>
        <displayFormat>CGSR-{0000}</displayFormat>
        <label>Supplier General Sub Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier General Sub Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__AdhocTask_Actions</fullName>
        <active>true</active>
        <label>AdhocTask Actions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>